--- a/extract_data.ipynb
+++ b/extract_data.ipynb
@@ -20,7 +20,8 @@
     "# for i in range()\n",
     "\n",
     "import json\n",
-    "\n",
+    "import pandas as pd\n",
+    "import os\n",
     "# # Load JSON data\n",
     "\n",
     "\n",
@@ -437,7 +438,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_chula_datasci",
+   "display_name": "my-env",
    "language": "python",
    "name": "python3"
   },
@@ -451,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
