--- a/extract_category.ipynb
+++ b/extract_category.ipynb
@@ -2,18 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import json\n",
-    "import os\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "subjects_all = {'code': [], 'abbrev': []}\n",
+    "subjects_all = {'code': [], 'abbrev': [], 'subject': []}\n",
     "years = [2018, 2019, 2020, 2021, 2022, 2023]\n",
     "for y in years:\n",
-    "    subjects = {'code': [], 'abbrev': []}\n",
+    "    subjects = {'code': [], 'abbrev': [], 'subject': []}\n",
     "    path = 'Project/' + str(y)\n",
     "    file_count = len([f for f in os.listdir(path) if os.path.isfile(os.path.join(path, f))])\n",
     "    for i in range(file_count):\n",
@@ -24,10 +32,13 @@
     "        for s in subject_area:\n",
     "            code = s['@code']\n",
     "            abbrev = s['@abbrev']\n",
+    "            subject = s['$']\n",
     "            subjects['code'].append(code)\n",
     "            subjects['abbrev'].append(abbrev)\n",
+    "            subjects['subject'].append(subject)\n",
     "            subjects_all['code'].append(code)\n",
     "            subjects_all['abbrev'].append(abbrev)\n",
+    "            subjects_all['subject'].append(subject)\n",
     "    data = pd.DataFrame(data=subjects)\n",
     "    data.drop_duplicates(inplace=True)\n",
     "    data = data.sort_values(by='code')\n",
@@ -42,25 +53,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subjects_all = {'code': [], 'abbrev': [], 'subject': []}\n",
+    "years = [2018, 2019, 2020, 2021, 2022, 2023]\n",
+    "for y in years:\n",
+    "    path = 'Project/' + str(y)\n",
+    "    file_count = len([f for f in os.listdir(path) if os.path.isfile(os.path.join(path, f))])\n",
+    "    for i in range(file_count):\n",
+    "        file_path = path + '/' + str(y) + str(i).zfill(5)\n",
+    "        with open(file_path, 'r') as file:\n",
+    "            data = json.load(file)\n",
+    "        subject_area = data['abstracts-retrieval-response']['subject-areas']['subject-area']\n",
+    "        for s in subject_area:\n",
+    "            code = s['@code']\n",
+    "            abbrev = s['@abbrev']\n",
+    "            subject = str(s['$']).strip('\\\"')\n",
+    "            subjects_all['code'].append(code)\n",
+    "            subjects_all['abbrev'].append(abbrev)\n",
+    "            subjects_all['subject'].append(subject)\n",
+    "all_data = pd.DataFrame(data=subjects_all)\n",
+    "all_data.drop_duplicates(inplace=True)\n",
+    "all_data = all_data.sort_values(by='code')\n",
+    "all_data.to_csv('category.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>abbrev</th>\n",
+       "      <th>subject</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>MULT</td>\n",
+       "      <td>Multidisciplinary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1100</td>\n",
+       "      <td>AGRI</td>\n",
+       "      <td>Agricultural and Biological Sciences (all)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1101</td>\n",
+       "      <td>AGRI</td>\n",
+       "      <td>Agricultural and Biological Sciences (miscella...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1102</td>\n",
+       "      <td>AGRI</td>\n",
+       "      <td>Agronomy and Crop Science</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1103</td>\n",
+       "      <td>AGRI</td>\n",
+       "      <td>Animal Science and Zoology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1104</td>\n",
+       "      <td>AGRI</td>\n",
+       "      <td>Aquatic Science</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1105</td>\n",
+       "      <td>AGRI</td>\n",
+       "      <td>Ecology, Evolution, Behavior and Systematics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1106</td>\n",
+       "      <td>AGRI</td>\n",
+       "      <td>Food Science</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1107</td>\n",
+       "      <td>AGRI</td>\n",
+       "      <td>Forestry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1108</td>\n",
+       "      <td>AGRI</td>\n",
+       "      <td>Horticulture</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "code      321\n",
-       "abbrev     27\n",
-       "dtype: int64"
+       "   code abbrev                                            subject\n",
+       "0  1000   MULT                                  Multidisciplinary\n",
+       "1  1100   AGRI         Agricultural and Biological Sciences (all)\n",
+       "2  1101   AGRI  Agricultural and Biological Sciences (miscella...\n",
+       "3  1102   AGRI                          Agronomy and Crop Science\n",
+       "4  1103   AGRI                         Animal Science and Zoology\n",
+       "5  1104   AGRI                                    Aquatic Science\n",
+       "6  1105   AGRI       Ecology, Evolution, Behavior and Systematics\n",
+       "7  1106   AGRI                                       Food Science\n",
+       "8  1107   AGRI                                           Forestry\n",
+       "9  1108   AGRI                                       Horticulture"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "category = pd.read_csv('category.csv')\n",
-    "category.nunique()"
+    "category.head(10)"
    ]
   }
  ],
