--- a/extract_data.ipynb
+++ b/extract_data.ipynb
@@ -13,13 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# for i in range()\n",
     "\n",
-    "import json\n",
     "\n",
     "# # Load JSON data\n",
     "\n",
@@ -45,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,189 +218,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Publisher</th>\n",
-       "      <th>Publish_date</th>\n",
-       "      <th>Authors</th>\n",
-       "      <th>Keywords</th>\n",
-       "      <th>Subjects</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Public health and international epidemiology f...</td>\n",
-       "      <td>Springer International Publishing</td>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>Pongpirul K., Lungren M.P.</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Flexible Printed Active Antenna for Digital Te...</td>\n",
-       "      <td>Institute of Electrical and Electronics Engine...</td>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>Pratumsiri T., Janpugdee P.</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2208, 2504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Parametric study of hydrogen production via so...</td>\n",
-       "      <td>Elsevier Ltd</td>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>Phuakpunk K., Chalermsinsuwan B., Putivisutisa...</td>\n",
-       "      <td>Circulating fluidized bed, Computational fluid...</td>\n",
-       "      <td>1600, 1500, 2209</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Superhydrophobic coating from fluoroalkylsilan...</td>\n",
-       "      <td>Elsevier B.V.</td>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>Saengkaew J., Le D., Samart C., Sawada H., Nis...</td>\n",
-       "      <td>Encapsulation, Fluoroalkylsilane, Natural rubb...</td>\n",
-       "      <td>1600, 3104, 3100, 3110, 2508</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Electrochemical impedance-based DNA sensor usi...</td>\n",
-       "      <td>Elsevier B.V.</td>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>Teengam P., Siangproh W., Tuantranont A., Vila...</td>\n",
-       "      <td>acpcPNA, Electrochemical impedance spectroscop...</td>\n",
-       "      <td>1602, 1303, 2304, 1607</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2787</th>\n",
-       "      <td>Association between leukocyte telomere length ...</td>\n",
-       "      <td>Blackwell Publishing</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>Poonpet T., Saetan N., Tanavalee A., Wilairata...</td>\n",
-       "      <td>angiogenesis, cytokines, osteoarthritis, real-...</td>\n",
-       "      <td>2745</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2788</th>\n",
-       "      <td>Anaerobic co-digestion of hydrolysate from alk...</td>\n",
-       "      <td>Springer Tokyoorders@springer.jp</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>Chavalparit O., Sasananan S., Kullavanijaya P....</td>\n",
-       "      <td>Alkali pre-treatment, Anaerobic digestion, Bio...</td>\n",
-       "      <td>2311, 2211</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2789</th>\n",
-       "      <td>Bullying at work: Cognitive appraisal of negat...</td>\n",
-       "      <td>American Psychological Association Inc.journal...</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>Hewett R., Liefooghe A., Visockaite G., Roongr...</td>\n",
-       "      <td>Bullying, Cognitive appraisal theory, Coping</td>\n",
-       "      <td>3202, 2739</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2790</th>\n",
-       "      <td>Three-dimensional interaction diagram for the ...</td>\n",
-       "      <td>Taylor and Francis Ltd.michael.wagreich@univie...</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>Keawsawasvong S., Ukritchon B.</td>\n",
-       "      <td>Finite element, General loading, Numerical ana...</td>\n",
-       "      <td>2305, 1909, 1111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2791</th>\n",
-       "      <td>Changing patterns of civil-military relations ...</td>\n",
-       "      <td>Taylor and Francis</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>Bamrungsuk S.</td>\n",
-       "      <td>None</td>\n",
-       "      <td>3300</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2792 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  Title  \\\n",
-       "0     Public health and international epidemiology f...   \n",
-       "1     Flexible Printed Active Antenna for Digital Te...   \n",
-       "2     Parametric study of hydrogen production via so...   \n",
-       "3     Superhydrophobic coating from fluoroalkylsilan...   \n",
-       "4     Electrochemical impedance-based DNA sensor usi...   \n",
-       "...                                                 ...   \n",
-       "2787  Association between leukocyte telomere length ...   \n",
-       "2788  Anaerobic co-digestion of hydrolysate from alk...   \n",
-       "2789  Bullying at work: Cognitive appraisal of negat...   \n",
-       "2790  Three-dimensional interaction diagram for the ...   \n",
-       "2791  Changing patterns of civil-military relations ...   \n",
-       "\n",
-       "                                              Publisher Publish_date  \\\n",
-       "0                     Springer International Publishing   2018-12-31   \n",
-       "1     Institute of Electrical and Electronics Engine...   2018-12-31   \n",
-       "2                                          Elsevier Ltd   2018-12-31   \n",
-       "3                                         Elsevier B.V.   2018-12-31   \n",
-       "4                                         Elsevier B.V.   2018-12-31   \n",
-       "...                                                 ...          ...   \n",
-       "2787                               Blackwell Publishing   2018-01-01   \n",
-       "2788                   Springer Tokyoorders@springer.jp   2018-01-01   \n",
-       "2789  American Psychological Association Inc.journal...   2018-01-01   \n",
-       "2790  Taylor and Francis Ltd.michael.wagreich@univie...   2018-01-01   \n",
-       "2791                                 Taylor and Francis   2018-01-01   \n",
-       "\n",
-       "                                                Authors  \\\n",
-       "0                            Pongpirul K., Lungren M.P.   \n",
-       "1                           Pratumsiri T., Janpugdee P.   \n",
-       "2     Phuakpunk K., Chalermsinsuwan B., Putivisutisa...   \n",
-       "3     Saengkaew J., Le D., Samart C., Sawada H., Nis...   \n",
-       "4     Teengam P., Siangproh W., Tuantranont A., Vila...   \n",
-       "...                                                 ...   \n",
-       "2787  Poonpet T., Saetan N., Tanavalee A., Wilairata...   \n",
-       "2788  Chavalparit O., Sasananan S., Kullavanijaya P....   \n",
-       "2789  Hewett R., Liefooghe A., Visockaite G., Roongr...   \n",
-       "2790                     Keawsawasvong S., Ukritchon B.   \n",
-       "2791                                      Bamrungsuk S.   \n",
-       "\n",
-       "                                               Keywords  \\\n",
-       "0                                                  None   \n",
-       "1                                                  None   \n",
-       "2     Circulating fluidized bed, Computational fluid...   \n",
-       "3     Encapsulation, Fluoroalkylsilane, Natural rubb...   \n",
-       "4     acpcPNA, Electrochemical impedance spectroscop...   \n",
-       "...                                                 ...   \n",
-       "2787  angiogenesis, cytokines, osteoarthritis, real-...   \n",
-       "2788  Alkali pre-treatment, Anaerobic digestion, Bio...   \n",
-       "2789       Bullying, Cognitive appraisal theory, Coping   \n",
-       "2790  Finite element, General loading, Numerical ana...   \n",
-       "2791                                               None   \n",
-       "\n",
-       "                          Subjects  \n",
-       "0                             2700  \n",
-       "1                       2208, 2504  \n",
-       "2                 1600, 1500, 2209  \n",
-       "3     1600, 3104, 3100, 3110, 2508  \n",
-       "4           1602, 1303, 2304, 1607  \n",
-       "...                            ...  \n",
-       "2787                          2745  \n",
-       "2788                    2311, 2211  \n",
-       "2789                    3202, 2739  \n",
-       "2790              2305, 1909, 1111  \n",
-       "2791                          3300  \n",
-       "\n",
-       "[2792 rows x 6 columns]"
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,24 +242,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Title             0\n",
-       "Publisher         8\n",
-       "Publish_date      0\n",
-       "Authors           0\n",
-       "Keywords        560\n",
-       "Subjects          0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39misnull()\u001b[38;5;241m.\u001b[39msum()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -427,17 +263,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2018_data.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m,index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df.to_csv(\"2018_data.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Public health and international epidemiology for radiology\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pybliometrics\n",
+    "\n",
+    "pybliometrics.scopus.init()\n",
+    "\n",
+    "from pybliometrics.scopus import AbstractRetrieval\n",
+    "\n",
+    "x = AbstractRetrieval('10.1007/978-3-319-98485-8_15')\n",
+    "print(x.title)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_chula_datasci",
+   "display_name": "my-env",
    "language": "python",
    "name": "python3"
   },
@@ -451,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
