--- a/extract_category.ipynb
+++ b/extract_category.ipynb
@@ -66,7 +66,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my-env",
+   "display_name": "dsde",
    "language": "python",
    "name": "python3"
   },
@@ -80,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
