--- a/extract_data.ipynb
+++ b/extract_data.ipynb
@@ -435,7 +435,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_chula_datasci",
+   "display_name": "my-env",
    "language": "python",
    "name": "python3"
   },
@@ -449,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
