--- a/ml.ipynb
+++ b/ml.ipynb
@@ -736,7 +736,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my-env",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
