Visualize: Area Trend Line Graph

--- a/visualize_merge_file.ipynb
+++ b/visualize_merge_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "[83188 rows x 4 columns]"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "[106497 rows x 4 columns]"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,17 +405,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 29, 79, 108, 66]\n",
+      "[0, 0, 29, 80, 108, 70]\n",
       "[58, 35, 31, 28, 0, 0]\n",
       "[21, 26, 24, 32, 15, 12]\n",
-      "[9, 11, 28, 48, 54, 89]\n",
+      "[5, 20, 28, 69, 72, 100]\n",
       "[20, 21, 20, 17, 19, 17]\n",
       "[25, 60, 90, 185, 197, 286]\n"
      ]
@@ -431,10 +431,14 @@
     "MAC_list = []\n",
     "for i in range(2018,2024):\n",
     "  key_count = data_merged[(data_merged['Year'] == i)]['authkey_word'].value_counts().reset_index().sort_values(by=['count'], ascending=False)\n",
-    "  COVID_list.append(key_count['count'][key_count['authkey_word'] == 'COVID-19'].sum())\n",
+    "  COVID_result = (key_count['count'][key_count['authkey_word'] == 'COVID-19 '].sum()) + (key_count['count'][key_count['authkey_word'] == 'COVID-19'].sum())\n",
+    "  + (key_count['count'][key_count['authkey_word'] == ' COVID-19'].sum()) + (key_count['count'][key_count['authkey_word'] == ' COVID-19'].sum())\n",
+    "  COVID_list.append(COVID_result)\n",
     "  HADRON_list.append(key_count['count'][key_count['authkey_word'] == 'Hadron-Hadron scattering (experiments)'].sum())\n",
     "  INFLAMM_list.append(key_count['count'][key_count['authkey_word'] == 'Inflammation'].sum())\n",
-    "  SAR_list.append(key_count['count'][key_count['authkey_word'] == ' Climate change '].sum())\n",
+    "  climate_result = (key_count['count'][key_count['authkey_word'] == 'Climate change '].sum()) + (key_count['count'][key_count['authkey_word'] == 'Climate change'].sum())\n",
+    "  + (key_count['count'][key_count['authkey_word'] == ' Climate change '].sum()) + (key_count['count'][key_count['authkey_word'] == ' Climate change'].sum())\n",
+    "  SAR_list.append(climate_result)\n",
     "  HIV_list.append(key_count['count'][key_count['authkey_word'] == 'HIV'].sum())\n",
     "  MAC_list.append(key_count['count'][key_count['authkey_word'] == ' Machine learning '].sum())\n",
     "\n",
@@ -448,16 +452,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "843"
+       "78"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -548,25 +552,55 @@
        "      <td>Hadron-Hadron scattering (experiments)</td>\n",
        "      <td>152</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Inflammation</td>\n",
+       "      <td>130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Deep learning</td>\n",
+       "      <td>115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>SARS-CoV-2</td>\n",
+       "      <td>115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>HIV</td>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Remote sensing</td>\n",
+       "      <td>111</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             authkey_word  count\n",
-       "0                       Machine learning     843\n",
-       "1                                Thailand    746\n",
-       "2                       machine learning     534\n",
-       "3                                COVID-19    282\n",
-       "4                         Climate change     280\n",
-       "5                         Climate change     239\n",
-       "6                       Machine Learning     179\n",
-       "7                         climate change     171\n",
-       "8                         climate change     156\n",
-       "9  Hadron-Hadron scattering (experiments)    152"
+       "                              authkey_word  count\n",
+       "0                        Machine learning     843\n",
+       "1                                 Thailand    746\n",
+       "2                        machine learning     534\n",
+       "3                                 COVID-19    282\n",
+       "4                          Climate change     280\n",
+       "5                          Climate change     239\n",
+       "6                        Machine Learning     179\n",
+       "7                          climate change     171\n",
+       "8                          climate change     156\n",
+       "9   Hadron-Hadron scattering (experiments)    152\n",
+       "10                            Inflammation    130\n",
+       "11                          Deep learning     115\n",
+       "12                              SARS-CoV-2    115\n",
+       "13                                     HIV    114\n",
+       "14                         Remote sensing     111"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,12 +608,12 @@
    "source": [
     "# COVID-19 ( COVID-19) ( SARS-CoV-2)\n",
     "key_count_merged = data_merged['authkey_word'].value_counts().reset_index().sort_values(by=['count'], ascending=False)\n",
-    "key_count_merged.head(10)"
+    "key_count_merged.head(15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
