--- a/ml1.ipynb
+++ b/ml1.ipynb
@@ -266,7 +266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my-env",
+   "display_name": "dsde",
    "language": "python",
    "name": "python3"
   },
@@ -280,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
