jason confusion matrix

--- a/ml1.ipynb
+++ b/ml1.ipynb
@@ -631,6 +631,16 @@
     "display = metrics.ConfusionMatrixDisplay(confusion_matrix=metrics.confusion_matrix(y_test, pred))\n",
     "display.plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confusion = pd.DataFrame(metrics.confusion_matrix(y_test, pred), index=['Actual_0', 'Actual_1'], columns=['Predicted_0', 'Predicted_1'])\n",
+    "confusion.to_csv('confusion_matrix_1.csv', index=False)\n"
+   ]
   }
  ],
  "metadata": {
