--- a/ml1.ipynb
+++ b/ml1.ipynb
@@ -634,12 +634,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "confusion = pd.DataFrame(metrics.confusion_matrix(y_test, pred), index=['Actual_0', 'Actual_1'], columns=['Predicted_0', 'Predicted_1'])\n",
-    "confusion.to_csv('confusion_matrix_1.csv', index=False)\n"
+    "confusion.to_csv('confusion_matrix_1.csv', index=True)\n",
+    "\n",
+    "report = pd.DataFrame(metrics.classification_report(y_test, pred, output_dict=True)).transpose()\n",
+    "report.to_csv('classification_report_1.csv', index=True)\n",
+    "\n"
    ]
   }
  ],
