adjust data to insert to mongodb

--- a/extract_data_for_ml.ipynb
+++ b/extract_data_for_ml.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -404,6 +404,7 @@
     "        coredata = abstracts_data.get('coredata', {})\n",
     "        authors_data = abstracts_data.get('authors', {}).get('author', [])\n",
     "        subject_areas = abstracts_data.get('subject-areas', {}).get('subject-area', [])\n",
+    "        \n",
     "\n",
     "        # Helper function to get author count\n",
     "        def get_sub_type():\n",
@@ -421,9 +422,12 @@
     "            except Exception:\n",
     "                return 0\n",
     "\n",
-    "        # Helper function to get open access status\n",
-    "\n",
-    "        # Helper function to get unique affiliations\n",
+    "        def get_ref_count():\n",
+    "            try:\n",
+    "                bibliography = abstracts_data.get('item',{}).get('bibrecord', {}).get('tail', {}).get('bibliography', {})\n",
+    "                return bibliography.get('@refcount')\n",
+    "            except Exception:\n",
+    "                return None\n",
     "        def get_unique_affiliations():\n",
     "            try:\n",
     "                affiliations = []\n",
@@ -445,12 +449,20 @@
     "        # Helper function to get citation count\n",
     "        def cite_count():\n",
     "            return coredata.get('citedby-count')\n",
-    "\n",
+    "        def get_open_access():\n",
+    "            try:\n",
+    "                return coredata.get('openaccess', None)  # Assumes 'openaccess' exists in coredata\n",
+    "            except Exception:\n",
+    "                return None\n",
+    "        \n",
     "        # Create a dictionary with the data\n",
     "        paper_data = {\n",
     "            'Title': coredata.get('dc:title') or None,\n",
+    "            'ref_count': get_ref_count(),\n",
     "            'Author_count': get_author_count(),\n",
     "            'Subject_area_count': get_subject_area_count(),\n",
+    "            'Unique_affiliations_count': get_unique_affiliations(),\n",
+    "            'Open_access': get_open_access(),\n",
     "            'subtype': get_sub_type(),\n",
     "            'Cite_count': cite_count()\n",
     "        }\n",
@@ -488,17 +500,8 @@
     "        print(f\"Processed {i} files...\")\n",
     "\n",
     "df = pd.DataFrame(all_data)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cols = ['Title','Author_count','subtype','Subject_area_count','Cite_count']\n",
-    "df[cols].to_csv('2023_ML2.csv',index=False)"
+    "\n",
+    "df.to_csv('2023_ML_V3.csv',index=False)"
    ]
   },
   {
@@ -506,7 +509,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "subtype\n",
+       "ar    2185\n",
+       "cp     341\n",
+       "re     110\n",
+       "ch      67\n",
+       "no      24\n",
+       "le      24\n",
+       "ed      18\n",
+       "er      11\n",
+       "dp       4\n",
+       "sh       4\n",
+       "bk       3\n",
+       "ip       1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df['subtype'].value_counts()"
+   ]
   }
  ],
  "metadata": {
